fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h1 h2 {
     background-clip: padding-box;
 }
 .mugshot {
-    margin: 40px 0px 20px 0px;
+    margin: 40px 0px 30px 0px;
 }
 .mugshot img {
     max-height: 175px;
@@ -102,8 +102,8 @@ h1 h2 {
     color: #ffffff;
 
     position: relative;
-    border-top: 75px solid transparent;
-    margin: -75px 0 0;
+    border-top: 65px solid transparent;
+    margin: -65px 0 0;
     background-clip: padding-box;
 }
 .section-social a i {
